--- a/LibraryWebUI/Views/Categories/Create.cshtml
+++ b/LibraryWebUI/Views/Categories/Create.cshtml
@@ -1,40 +1,14 @@
-﻿@model Entities.Entities.Category
+﻿@model CategoryModel
 
-@{
-    ViewData["Title"] = "Create";
+@{ 
+    ViewData["Title"] = "Create Category"; 
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<partial name="_CreateEdit" model="Model" />
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Category List</a>
 </div>
 
