--- a/LibraryWebUI/Views/Categories/Edit.cshtml
+++ b/LibraryWebUI/Views/Categories/Edit.cshtml
@@ -1,41 +1,34 @@
-﻿@model Entities.Entities.Category
+﻿@*@model Entities.Entities.Category*@
+@model CategoryModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Category";
 }
 
-<h1>Edit</h1>
+<h1>@ViewBag.Title</h1>
 
-<h4>Category</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<h1>@ViewBag.Title</h1>
+
+<partial name="_CreateEdit" model="Model" />
+
+<form id="deleteCategoryForm" asp-action="Delete" method="post">
+    <input asp-for="Id" type="hidden" />
+</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button id="deleteCategoryButton" class="btn btn-danger">Delete</button>
+    <br />
+    <br />
+    <a asp-action="Index">Back to Category List</a>
 </div>
+
+@section Scripts
+{
+    <script>
+    $(() => {
+            $("#deleteCategoryButton").click(function () {
+                $("#deleteCategoryForm").submit();
+            });
+        });</script>
+}
 
