--- a/LibraryWebUI/Views/Categories/Index.cshtml
+++ b/LibraryWebUI/Views/Categories/Index.cshtml
@@ -1,13 +1,36 @@
-﻿@model IEnumerable<Entities.Entities.Category>
+﻿@model IEnumerable<CategoryModel>
 
-@{
-    ViewData["Title"] = "Index";
-}
+@{ 
+    ViewData["Title"] = "Category List"; 
+ }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><i class="fas fa-plus"></i> Create New Category</a>
+</p>
+<p class="bg-primary text-white">
+    @{ string count;
+        if (Model != null)
+        {
+            if (Model.Count() == 0)
+            {
+                count = "No categories found";
+            }
+            else if (Model.Count() == 1)
+            {
+                count = Model.Count() + " category found";
+            }
+            else //if (Model.Count() > 1)
+            {
+                count = Model.Count() + " categories found";
+            }
+        }
+        else
+        {
+            count = "No categories found";
+        }
+@count }
 </p>
 <table class="table">
     <thead>
@@ -19,29 +42,28 @@
                 @Html.DisplayNameFor(model => model.Description)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Guid)
+                @Html.DisplayNameFor(model => model.ProductCount)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Guid)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
+        @foreach (var item in Model)
+        {
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.Name)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.Description)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.ProductCount)
+    </td>
+    <td>
+        <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-lg fa-pen-square"></i> Edit</a>
+    </td>
+</tr>
 }
     </tbody>
 </table>
