--- a/LibraryWebUI/Views/Books/Create.cshtml
+++ b/LibraryWebUI/Views/Books/Create.cshtml
@@ -1,7 +1,9 @@
 ﻿@*@model Entities.Entities.Book*@
 @model BookModel
 
-@{ViewData["Title"] = "Create New Book"; }
+@{
+    ViewData["Title"] = "Create New Book"; 
+}
 
 <h1>@ViewData["Title"]</h1>
 
@@ -13,26 +15,33 @@
             @Html.AntiForgeryToken()
             @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
             <div asp-validation-summary="All" class="text-danger"></div>
+
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
+                <label asp-for="Description"></label>
+                @*<input asp-for="Description" class="form-control"/>*@
+                <textarea asp-for="Description" class="form-control"></textarea>
                 <span asp-validation-for="Description" class="text-danger"></span>
             </div>
+
+
             <div class="form-group">
                 <label asp-for="UnitPriceText"></label>
                 <input asp-for="UnitPriceText" class="form-control" />
                 <span asp-validation-for="UnitPriceText" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="StockAmount" class="control-label"></label>
+                <label asp-for="StockAmount"></label>
                 <input asp-for="StockAmount" class="form-control" />
                 <span asp-validation-for="StockAmount" class="text-danger"></span>
             </div>
+
             <div class="form-group">
                 <label asp-for="CategoryId" class="control-label"></label>
                 @*<select asp-for="CategoryId" class="form-control" asp-items="ViewBag.CategoryId"></select>*@
@@ -41,11 +50,12 @@
                 </select>
                 <span asp-validation-for="CategoryId" class="text-danger"></span>
             </div>
+
             @*<div class="form-group">
-                    <label asp-for="Guid" class="control-label"></label>
-                    <input asp-for="Guid" class="form-control" />
-                    <span asp-validation-for="Guid" class="text-danger"></span>
-                </div>*@
+            <label asp-for="Guid" class="control-label"></label>
+            <input asp-for="Guid" class="form-control" />
+            <span asp-validation-for="Guid" class="text-danger"></span>
+        </div>*@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
