--- a/LibraryWebUI/Views/Books/Index.cshtml
+++ b/LibraryWebUI/Views/Books/Index.cshtml
@@ -23,8 +23,8 @@
                 @Html.DisplayNameFor(model => model.StockAmount)
             </th>
             @*<th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>*@
+                    @Html.DisplayNameFor(model => model.Category)
+                </th>*@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
@@ -39,10 +39,10 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 @*<td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>*@
+                        @Html.DisplayFor(modelItem => item.Description)
+                    </td>*@
                 <td>
-                    @Html.DisplayFor(modelItem => item.UnitPriceText)
+                    ₺@Html.DisplayFor(modelItem => item.UnitPriceText)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.StockAmount)
@@ -64,17 +64,19 @@
 {
     <link href="~/lib/datatables/css/jquery.dataTables.min.css" rel="stylesheet" />
     <script src="~/lib/datatables/js/jquery.dataTables.min.js"></script>
+    <script src="~/js/datatables.js"></script>
     <link href="~/lib/AlertifyJS/css/alertify.min.css" rel="stylesheet" />
     <script src="~/lib/AlertifyJS/alertify.min.js"></script>
     <script>
         $(function () {
             $("#books").DataTable();
+            //BindDataTable("books");
         });
 
         function deleteBook(id) {
             alertify.confirm("Warning!", "Do you want to delete this book?",
                 function () {
-                    window.location.href = "/Book/Delete/" + id;
+                    window.location.href = "/Books/Delete/" + id;
                 },
                 function () {
                     alertify.error("Delete canceled.");
