--- a/LibraryWebUI/Views/Home/Index.cshtml
+++ b/LibraryWebUI/Views/Home/Index.cshtml
@@ -1,5 +1,17 @@
 ﻿@{
-    ViewData["Title"] = "Home";
-}
+        ViewData["Title"] = "Home";
+    }
 
-Burası benim content alanım :)
+    Burası benim content alanım :)
+@*<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+</head>
+<body>
+    <img src="./../Resim1/Library.jpg" width="400" height="532" />
+    <br />
+    <a href="../02_BasicHtml.html">Basic HTML</a>
+</body>
+</html>*@
