--- a/LibraryWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryWebUI/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
     <div class="wrapper">
         <nav id="sidebar">
             <div class="sidebar-header div-header">
-                <h3>Kitaplık</h3>
+                <h3>Library</h3>
             </div>
             <ul class="list-unstyled components">
                 <li class="nav-item">
