--- a/LibraryWebUI/Views/Shared/_Layout.cshtml
+++ b/LibraryWebUI/Views/Shared/_Layout.cshtml
@@ -45,10 +45,7 @@
                                 <a class="a-navbar" asp-action="Register" asp-controller="Account"><i class="far fa-save"></i> Register</a>
                             </li>
                             <li class="nav-item">
-                                <a class="a-navbar" href="#"> UserName</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="a-navbar" href="#"> Logout</a>
+                                <a class="a-navbar" asp-action="Login" asp-controller="Accounts"><i class="fas fa-sign-in-alt"></i> Login</a>
                             </li>
                         </ul>
                     </div>
