--- a/LibraryWebUI/Views/Books/Index.cshtml
+++ b/LibraryWebUI/Views/Books/Index.cshtml
@@ -26,7 +26,7 @@
                     @Html.DisplayNameFor(model => model.Category)
                 </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @Html.DisplayNameFor(model => model.Category)
             </th>
             <th></th>
         </tr>
