--- a/LibraryWebUI/Views/Cities/Create.cshtml
+++ b/LibraryWebUI/Views/Cities/Create.cshtml
@@ -1,39 +1,13 @@
-﻿@model Entities.Entities.City
+﻿@model CityModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create City";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>City</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CountryId" class="control-label"></label>
-                <select asp-for="CountryId" class ="form-control" asp-items="ViewBag.CountryId"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<partial name="_CreateEdit" model="Model" />
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to City List</a>
 </div>
-
