--- a/LibraryWebUI/Views/Cities/Index.cshtml
+++ b/LibraryWebUI/Views/Cities/Index.cshtml
@@ -1,13 +1,38 @@
-﻿@model IEnumerable<Entities.Entities.City>
+﻿@model IEnumerable<CityModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "City List";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><i class="fas fa-plus"></i> Create New City</a>
+</p>
+<p class="bg-primary text-white">
+    @{
+        string count;
+        if (Model != null)
+        {
+            if (Model.Count() == 0)
+            {
+                count = "No cities found";
+            }
+            else if (Model.Count() == 1)
+            {
+                count = Model.Count() + " city found";
+            }
+            else //if (Model.Count() > 1)
+            {
+                count = Model.Count() + " cities found";
+            }
+        }
+        else
+        {
+            count = "No cities found";
+        }
+        @count
+    }
 </p>
 <table class="table">
     <thead>
@@ -16,32 +41,25 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Country)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Guid)
+                @Html.DisplayNameFor(model => model.Country.Name)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Country.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Guid)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Country.Name)
+                </td>
+                <td>
+                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-lg fa-pen-square"></i> Edit</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
