--- a/LibraryWebUI/Views/Books/Index.cshtml
+++ b/LibraryWebUI/Views/Books/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<Entities.Entities.Book>*@
-@model IEnumerable<BookModel>
+﻿@model IEnumerable<BookModel>
 
 @{
     ViewData["Title"] = "Book List";
