--- a/LibraryWebUI/Views/Countries/Create.cshtml
+++ b/LibraryWebUI/Views/Countries/Create.cshtml
@@ -1,35 +1,13 @@
-﻿@model Entities.Entities.Country
+﻿@model CountryModel
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "Create Country";
 }
 
-<h1>Create</h1>
+<h1>@ViewData["Title"]</h1>
 
-<h4>Country</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<partial name="_CreateEdit" model="Model" />
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Country List</a>
 </div>
-
