--- a/LibraryWebUI/Views/Countries/Edit.cshtml
+++ b/LibraryWebUI/Views/Countries/Edit.cshtml
@@ -1,36 +1,32 @@
-﻿@model Entities.Entities.Country
+﻿@model CountryModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Country";
 }
 
-<h1>Edit</h1>
+<h1>@ViewBag.Title</h1>
 
-<h4>Country</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
-            </div>
-            <input type="hidden" asp-for="Id" />
-            <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
-            </div>
-        </form>
-    </div>
-</div>
+<partial name="_CreateEdit" model="Model" />
+
+<form id="deleteCountryForm" asp-action="Delete" method="post">
+    <input asp-for="Id" type="hidden" />
+</form>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <button id="deleteCountryButton" class="btn btn-danger">Delete</button>
+    <br />
+    <br />
+    <a asp-action="Index">Back to Country List</a>
 </div>
 
+@section Scripts
+{
+    @* Burada silme için kullandığımız form yönteminin bir diğer ve kullanımı biraz daha zor alternatifi AJAX yöntemidir. *@
+    <script>
+        $(function () {
+            $("#deleteCountryButton").click(function () {
+                $("#deleteCountryForm").submit();
+            });
+        });
+    </script>
+}
