--- a/LibraryWebUI/Views/Countries/_CreateEdit.cshtml
+++ b/LibraryWebUI/Views/Countries/_CreateEdit.cshtml
@@ -1,16 +1,12 @@
-﻿@model RoleModel
+﻿@model CountryModel
 
-@{
-    ViewData["Title"] = "Create Role";
-}
-
-<h1>@ViewData["Title"]</h1>
-
-<h4>Role</h4>
+<h4>Country</h4>
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Create">
+        @using (Html.BeginForm())
+        {
+            <input asp-for="Id" type="hidden" />
             @Html.AntiForgeryToken()
             <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
@@ -21,10 +17,6 @@
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-outline-primary" />
             </div>
-        </form>
+        }
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to Role List</a>
 </div>
