--- a/LibraryWebUI/Views/Roles/Edit.cshtml
+++ b/LibraryWebUI/Views/Roles/Edit.cshtml
@@ -1,36 +1,70 @@
-﻿@model Entities.Entities.Role
+﻿@model RoleModel
 
 @{
-    ViewData["Title"] = "Edit";
+    ViewData["Title"] = "Edit Role";
 }
 
-<h1>Edit</h1>
+<h1>@ViewData["Title"]</h1>
 
 <h4>Role</h4>
 <hr />
-<div class="row">
-    <div class="col-md-4">
+<p id="deleteRoleMessage"></p>
+<div class="row" id="editRoleForm">
+    <div class="col-md-6">
         <form asp-action="Edit">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+            <input asp-for="Id" type="hidden" id="roleid" />
+            @Html.AntiForgeryToken()
+            <div asp-validation-summary="All" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
+                <label asp-for="Name"></label>
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
             </div>
-            <input type="hidden" asp-for="Id" />
             <div class="form-group">
-                <label asp-for="Guid" class="control-label"></label>
-                <input asp-for="Guid" class="form-control" />
-                <span asp-validation-for="Guid" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-outline-primary" />
+                <br />
+                <br />
+                <a id="deleteRoleButton" class="btn btn-danger" href="">Delete</a>
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Role List</a>
 </div>
 
+@section Scripts {
+    <script>
+        $(document).ready(function () {
+            $("#deleteRoleButton").on("click", function (event) {
+                event.preventDefault();
+                var roleId = $("#roleid").val();
+                var deleteRoleMessage = $("#deleteRoleMessage");
+                var editRoleForm = $("#editRoleForm");
+                $.ajax({
+                    cache: false,
+                    dataType: "json",
+                    url: "/Roles/Delete",
+                    type: "post",
+                    data: { id: roleId },
+                    success: function (deleteResultMessage) {
+                        deleteRoleMessage.removeClass();
+                        if (deleteResultMessage.includes(".")) { // .
+                            deleteRoleMessage.addClass("bg-success text-white");
+                            editRoleForm.hide();
+                        } else { // !
+                            deleteRoleMessage.addClass("bg-danger text-white");
+                            editRoleForm.show();
+                        }
+                        deleteRoleMessage.text(deleteResultMessage);
+                    },
+                    error: function () {
+                        deleteRoleMessage.text("An error occured during AJAX request!");
+                        editRoleForm.show();
+                    }
+                });
+            });
+        });
+    </script>
+}
