--- a/LibraryWebUI/Views/Roles/Index.cshtml
+++ b/LibraryWebUI/Views/Roles/Index.cshtml
@@ -1,13 +1,38 @@
-﻿@model IEnumerable<Entities.Entities.Role>
+﻿@model IEnumerable<RoleModel>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Role List";
 }
 
-<h1>Index</h1>
+<h1>@ViewData["Title"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create"><i class="fas fa-plus"></i> Create New Role</a>
+</p>
+<p class="bg-primary text-white">
+    @{
+        string count;
+        if (Model != null)
+        {
+            if (Model.Count() == 0)
+            {
+                count = "No roles found";
+            }
+            else if (Model.Count() == 1)
+            {
+                count = Model.Count() + " role found";
+            }
+            else //if (Model.Count() > 1)
+            {
+                count = Model.Count() + " roles found";
+            }
+        }
+        else
+        {
+            count = "No roles found";
+        }
+        @count
+    }
 </p>
 <table class="table">
     <thead>
@@ -15,27 +40,21 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Guid)
-            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Name)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Guid)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
-            </td>
-        </tr>
-}
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Name)
+                </td>
+                <td>
+                    <a asp-action="Details" asp-route-id="@item.Id"><i class="fas fa-lg fa-info-circle"></i> Details</a> |
+                    <a asp-action="Edit" asp-route-id="@item.Id"><i class="fas fa-lg fa-pen-square"></i> Edit</a>
+                </td>
+            </tr>
+        }
     </tbody>
 </table>
