--- a/LibraryWebUI/Views/Books/Create.cshtml
+++ b/LibraryWebUI/Views/Books/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-6">
-        <form asp-action="Create" autocomplete="off">
+        <form asp-action="Create" autocomplete="off"  enctype="multipart/form-data">
             @Html.AntiForgeryToken()
             @*<div asp-validation-summary="ModelOnly" class="text-danger"></div>*@
             <div asp-validation-summary="All" class="text-danger"></div>
