--- a/LibraryWebUI/Views/Books/Details.cshtml
+++ b/LibraryWebUI/Views/Books/Details.cshtml
@@ -45,6 +45,9 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to Book List</a>
+    @if (User.Identity.IsAuthenticated && User.IsInRole("Admin"))
+    {
+<a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> @:|
+}
+    <a asp-action="Index">Back to Product List</a>
 </div>
